fixed spacing, added GA code

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -58,6 +58,10 @@ body {
   border-bottom: 1px solid #e5e5e5;
   background-color: rgba(255,255,255, 0.8);
   color: inherit;
+  
+  #hits {
+    margin-top: 24px;
+  }
 
   .btn-lg {
     font-size: 21px;
@@ -68,6 +72,26 @@ body {
     font-size: 20px;
     padding: 14px 24px;
   }
+  
+  #title {
+    margin-bottom: 14px;
+  }
+  
+  #label {
+    font-size: 20px;
+  }
+  
+  #ingredients {
+    text-align: left;
+  }
+  
+  #viewbtn {
+    margin-top: 14px;
+  }
+  
+ // #diet {
+   // display: inline-block;
+ // }
 }
 
 /* Supporting marketing content */
